hero spacing issue

--- a/web/wp-content/themes/mm-bradentongulfislands/assets/src/scripts/gutenberg/blocks/hero/styles/style.scss
+++ b/web/wp-content/themes/mm-bradentongulfislands/assets/src/scripts/gutenberg/blocks/hero/styles/style.scss
@@ -337,6 +337,11 @@
 	}
 }
 
+.hero--wave + * {
+	margin-top: -4rem;
+  }
+  
+
 
 .#{$block-prefix}-hero {
 	&.wave-alter {
